tests/reference/asr-enum_02-54656c5.stderr
semantic error: Enumerations with non-integer or non-unique integer values cannot interoperate with C code.
 --> tests/errors/enum_02.py:5:1 - 8:17
  |
5 |    class Color(Enum):
  |    ^^^^^^^^^^^^^^^^^^...
...
  |
8 |        BLUE: i32 = 2
  | ...^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
